# pobr-projekt-starbucks

./: CMakeLists.txt
src/: coefficients.h  color.h  feature.h  main.cpp  processing.h  structures.h
